v3-cuda4.2/cuobjdump_to_ptxplus/elf_parser.output
Terminals unused in grammar

   HEXNUMBER


Grammar

    0 $accept: elffile $end

    1 elffile: symtab program

    2 symtab: STBEGIN STHEADER stcontent

    3 stcontent: stcontent stline
    4          | stline

    5 stline: NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER IDENTIFIER
    6       | NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    7 program: program cmemsection
    8        | program localmemsection
    9        | program cmem14section
   10        | /* empty */

   11 localmemsection: LOCALMEM

   12 $@1: /* empty */

   13 cmemsection: C1BEGIN $@1 cmemvals

   14 $@2: /* empty */

   15 cmemsection: C0BEGIN $@2 cmemvals

   16 cmemvals: cmemvals CMEMVAL SPACE2
   17         | /* empty */

   18 cmem14section: C14BEGIN c14content
   19              | C14BEGIN

   20 c14content: c14content c14line
   21           | c14line

   22 c14line: NUMBER IDENTIFIER IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
C1BEGIN (258) 13
C14BEGIN (259) 18 19
CMEMVAL (260) 16
SPACE2 (261) 16
C0BEGIN (262) 15
STBEGIN (263) 2
STHEADER (264) 2
NUMBER (265) 5 6 22
HEXNUMBER (266)
IDENTIFIER (267) 5 22
LOCALMEM (268) 11


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
elffile (15)
    on left: 1, on right: 0
symtab (16)
    on left: 2, on right: 1
stcontent (17)
    on left: 3 4, on right: 2 3
stline (18)
    on left: 5 6, on right: 3 4
program (19)
    on left: 7 8 9 10, on right: 1 7 8 9
localmemsection (20)
    on left: 11, on right: 8
cmemsection (21)
    on left: 13 15, on right: 7
$@1 (22)
    on left: 12, on right: 13
$@2 (23)
    on left: 14, on right: 15
cmemvals (24)
    on left: 16 17, on right: 13 15 16
cmem14section (25)
    on left: 18 19, on right: 9
c14content (26)
    on left: 20 21, on right: 18 20
c14line (27)
    on left: 22, on right: 20 21


State 0

    0 $accept: . elffile $end
    1 elffile: . symtab program
    2 symtab: . STBEGIN STHEADER stcontent

    STBEGIN  shift, and go to state 1

    elffile  go to state 2
    symtab   go to state 3


State 1

    2 symtab: STBEGIN . STHEADER stcontent

    STHEADER  shift, and go to state 4


State 2

    0 $accept: elffile . $end

    $end  shift, and go to state 5


State 3

    1 elffile: symtab . program
    7 program: . program cmemsection
    8        | . program localmemsection
    9        | . program cmem14section
   10        | .

    $default  reduce using rule 10 (program)

    program  go to state 6


State 4

    2 symtab: STBEGIN STHEADER . stcontent
    3 stcontent: . stcontent stline
    4          | . stline
    5 stline: . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER IDENTIFIER
    6       | . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 7

    stcontent  go to state 8
    stline     go to state 9


State 5

    0 $accept: elffile $end .

    $default  accept


State 6

    1 elffile: symtab program .  [$end]
    7 program: program . cmemsection
    8        | program . localmemsection
    9        | program . cmem14section
   11 localmemsection: . LOCALMEM
   13 cmemsection: . C1BEGIN $@1 cmemvals
   15            | . C0BEGIN $@2 cmemvals
   18 cmem14section: . C14BEGIN c14content
   19              | . C14BEGIN

    C1BEGIN   shift, and go to state 10
    C14BEGIN  shift, and go to state 11
    C0BEGIN   shift, and go to state 12
    LOCALMEM  shift, and go to state 13

    $default  reduce using rule 1 (elffile)

    localmemsection  go to state 14
    cmemsection      go to state 15
    cmem14section    go to state 16


State 7

    5 stline: NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER IDENTIFIER
    6       | NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 17


State 8

    2 symtab: STBEGIN STHEADER stcontent .  [$end, C1BEGIN, C14BEGIN, C0BEGIN, LOCALMEM]
    3 stcontent: stcontent . stline
    5 stline: . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER IDENTIFIER
    6       | . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 7

    $default  reduce using rule 2 (symtab)

    stline  go to state 18


State 9

    4 stcontent: stline .

    $default  reduce using rule 4 (stcontent)


State 10

   12 $@1: .
   13 cmemsection: C1BEGIN . $@1 cmemvals

    $default  reduce using rule 12 ($@1)

    $@1  go to state 19


State 11

   18 cmem14section: C14BEGIN . c14content
   19              | C14BEGIN .  [$end, C1BEGIN, C14BEGIN, C0BEGIN, LOCALMEM]
   20 c14content: . c14content c14line
   21           | . c14line
   22 c14line: . NUMBER IDENTIFIER IDENTIFIER

    NUMBER  shift, and go to state 20

    $default  reduce using rule 19 (cmem14section)

    c14content  go to state 21
    c14line     go to state 22


State 12

   14 $@2: .
   15 cmemsection: C0BEGIN . $@2 cmemvals

    $default  reduce using rule 14 ($@2)

    $@2  go to state 23


State 13

   11 localmemsection: LOCALMEM .

    $default  reduce using rule 11 (localmemsection)


State 14

    8 program: program localmemsection .

    $default  reduce using rule 8 (program)


State 15

    7 program: program cmemsection .

    $default  reduce using rule 7 (program)


State 16

    9 program: program cmem14section .

    $default  reduce using rule 9 (program)


State 17

    5 stline: NUMBER NUMBER . NUMBER NUMBER NUMBER NUMBER IDENTIFIER
    6       | NUMBER NUMBER . NUMBER NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 24


State 18

    3 stcontent: stcontent stline .

    $default  reduce using rule 3 (stcontent)


State 19

   13 cmemsection: C1BEGIN $@1 . cmemvals
   16 cmemvals: . cmemvals CMEMVAL SPACE2
   17         | .

    $default  reduce using rule 17 (cmemvals)

    cmemvals  go to state 25


State 20

   22 c14line: NUMBER . IDENTIFIER IDENTIFIER

    IDENTIFIER  shift, and go to state 26


State 21

   18 cmem14section: C14BEGIN c14content .  [$end, C1BEGIN, C14BEGIN, C0BEGIN, LOCALMEM]
   20 c14content: c14content . c14line
   22 c14line: . NUMBER IDENTIFIER IDENTIFIER

    NUMBER  shift, and go to state 20

    $default  reduce using rule 18 (cmem14section)

    c14line  go to state 27


State 22

   21 c14content: c14line .

    $default  reduce using rule 21 (c14content)


State 23

   15 cmemsection: C0BEGIN $@2 . cmemvals
   16 cmemvals: . cmemvals CMEMVAL SPACE2
   17         | .

    $default  reduce using rule 17 (cmemvals)

    cmemvals  go to state 28


State 24

    5 stline: NUMBER NUMBER NUMBER . NUMBER NUMBER NUMBER IDENTIFIER
    6       | NUMBER NUMBER NUMBER . NUMBER NUMBER NUMBER

    NUMBER  shift, and go to state 29


State 25

   13 cmemsection: C1BEGIN $@1 cmemvals .  [$end, C1BEGIN, C14BEGIN, C0BEGIN, LOCALMEM]
   16 cmemvals: cmemvals . CMEMVAL SPACE2

    CMEMVAL  shift, and go to state 30

    $default  reduce using rule 13 (cmemsection)


State 26

   22 c14line: NUMBER IDENTIFIER . IDENTIFIER

    IDENTIFIER  shift, and go to state 31


State 27

   20 c14content: c14content c14line .

    $default  reduce using rule 20 (c14content)


State 28

   15 cmemsection: C0BEGIN $@2 cmemvals .  [$end, C1BEGIN, C14BEGIN, C0BEGIN, LOCALMEM]
   16 cmemvals: cmemvals . CMEMVAL SPACE2

    CMEMVAL  shift, and go to state 30

    $default  reduce using rule 15 (cmemsection)


State 29

    5 stline: NUMBER NUMBER NUMBER NUMBER . NUMBER NUMBER IDENTIFIER
    6       | NUMBER NUMBER NUMBER NUMBER . NUMBER NUMBER

    NUMBER  shift, and go to state 32


State 30

   16 cmemvals: cmemvals CMEMVAL . SPACE2

    SPACE2  shift, and go to state 33


State 31

   22 c14line: NUMBER IDENTIFIER IDENTIFIER .

    $default  reduce using rule 22 (c14line)


State 32

    5 stline: NUMBER NUMBER NUMBER NUMBER NUMBER . NUMBER IDENTIFIER
    6       | NUMBER NUMBER NUMBER NUMBER NUMBER . NUMBER

    NUMBER  shift, and go to state 34


State 33

   16 cmemvals: cmemvals CMEMVAL SPACE2 .

    $default  reduce using rule 16 (cmemvals)


State 34

    5 stline: NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER . IDENTIFIER
    6       | NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER .  [$end, C1BEGIN, C14BEGIN, C0BEGIN, NUMBER, LOCALMEM]

    IDENTIFIER  shift, and go to state 35

    $default  reduce using rule 6 (stline)


State 35

    5 stline: NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER IDENTIFIER .

    $default  reduce using rule 5 (stline)
